fixed form alignment

--- a/src/Register.css
+++ b/src/Register.css
@@ -29,7 +29,7 @@ body{
 
 .register input{
     backdrop-filter:none;
-    color: rgba(110, 110, 110, 0.384);
+    
     background: transparent;
     border-bottom: 2px solid;
     border-top: transparent;
@@ -46,6 +46,7 @@ body{
     margin-bottom:10px;
     margin-top: 30px;
     cursor: pointer;
+    color: #6e6e6e23;
     
     
 }
@@ -57,8 +58,8 @@ input:hover{
     margin-top: 20px;
     margin-bottom: 20px;
     cursor: pointer;
-    width: 20px;
-    height: 10px;
+    width: 100px;
+    height: 25px;
     border: 1px solid white;
 }
 
